[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Timer.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.627451, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.831373, 0.133333, 0.0823529, 1 )

[node name="Timer" type="Node2D"]
script = ExtResource( 1 )
cooking_time = 2
burning_time = 6

[node name="Timer" type="Timer" parent="."]

[node name="CookingProgress" type="ProgressBar" parent="."]
visible = false
margin_left = -70.0
margin_right = 73.0
margin_bottom = 14.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BurningProgress" type="ProgressBar" parent="."]
visible = false
margin_left = -70.0
margin_top = -22.0
margin_right = 73.0
margin_bottom = -8.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
